--- a/.github/workflows/tvlgen_pr.yml
+++ b/.github/workflows/tvlgen_pr.yml
@@ -11,3 +11,5 @@ permissions:
 jobs:
   validate-and-build:
     uses: ./.github/workflows/generate_build_tvl.yml
+    with:
+      ref: ${{ github.event.pull_request.head.sha }}
