--- a/.github/workflows/test_tvlgen.yml
+++ b/.github/workflows/test_tvlgen.yml
@@ -3,13 +3,14 @@
 
 name: 'generator-test'
 
-on: ['workflow_call']
-  # workflow_call:
-    # inputs:
-      # checkout_ref:
-        # description: >
-          # Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
-
+#on: ['workflow_call']
+on:
+  workflow_call:
+    inputs:
+      checkout_ref:
+        description: >
+           Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
+        default: ''
 permissions:
   contents: read
 
@@ -18,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        ref: ${{ inputs.checkout_ref }}
     - name: 'Install packages'
       run: |
         sudo apt-get update
