--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       checkout_ref:
         description: >
-           Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
+          Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
         default: ''
 
 permissions:
@@ -14,6 +14,8 @@ permissions:
 jobs:
   validate:
     uses: ./.github/workflows/test_tvlgen.yml
+    with:
+      ref: ${{ github.event.pull_request.head.sha }}
   build:
     runs-on: ubuntu-latest
     needs: validate
