--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -1,12 +1,11 @@
 name: 'tvl-generate-build'
 
-on:
-  workflow_call:
-    inputs:
-      checkout_ref:
-        description: >
-          Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
-        default: ''
+inputs:
+  checkout_ref:
+    description: >
+      Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
+    default: ''
+    required: false
 
 permissions:
   contents: read
