--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -1,11 +1,14 @@
 name: 'tvl-generate-build'
 
-inputs:
-  checkout_ref:
-    description: >
-      Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
-    default: ''
-    required: false
+on:
+  workflow_call:
+    inputs:
+      checkout_ref:
+        description: >
+          Branch / tag / SHA which is forwarded to actions/checkout@v3::ref
+        default: ''
+        required: false
+        type: string
 
 permissions:
   contents: read
