--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -17,7 +17,7 @@ jobs:
   validate:
     uses: ./.github/workflows/test_tvlgen.yml
     with:
-      ref: ${{ github.event.pull_request.head.sha }}
+      checkout_ref: ${{ github.event.pull_request.head.sha }}
   build:
     runs-on: ubuntu-latest
     needs: validate
