--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -22,6 +22,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     steps:
+    - name: 'Loads State'
+      uses: actions/cache/restore@v3
+      with:
+        path: ./
+        key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
     - name: 'Generate TVL'
       run: |
         cmake -B tvl
