--- a/.github/workflows/tvlgen_merge_main.yaml
+++ b/.github/workflows/tvlgen_merge_main.yaml
@@ -14,6 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate-and-build
     steps:
+    - name: 'Loads State'
+      uses: actions/cache/restore@v3
+      with:
+        path: ./
+        key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
     - name: Setup Git Creds
       run: |
         git reset --hard
