--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -17,16 +17,19 @@ jobs:
   validate:
     uses: ./.github/workflows/test_tvlgen.yml
     with:
-      checkout_ref: ${{ github.event.pull_request.head.sha }}
+      checkout_ref: ${{ inputs.checkout_ref }}
   build:
     runs-on: ubuntu-latest
     needs: validate
     steps:
-    - name: 'Loads State'
-      uses: actions/cache/restore@v3
+    - uses: actions/TvlMergeTest@v1
       with:
-        path: ./
-        key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
+        checkout_ref: ${{ inputs.checkout_ref }}
+    # - name: 'Loads State'
+    #   uses: actions/cache/restore@v3
+    #   with:
+    #     path: ./
+    #     key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
     - name: 'Generate TVL'
       run: |
         cmake -B tvl
