--- a/.github/workflows/test_tvlgen.yml
+++ b/.github/workflows/test_tvlgen.yml
@@ -21,33 +21,37 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    #  - uses: actions/checkout@v3
+    #    with:
+    #      ref: ${{ inputs.checkout_ref }}
+    #  - name: 'Install packages'
+    #    run: |
+    #      sudo apt-get update
+    #      sudo apt-get install graphviz-dev util-linux
+    #  - name: Set up Python 3.8
+    #    uses: actions/setup-python@v3
+    #    with:
+    #      python-version: '3.8'
+    #  - name: 'Install python dependencies'
+    #    run: |
+    #      python -m pip install --upgrade pip
+    #      pip install flake8 pytest
+    #      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - uses: actions/TvlMergeTest@v1
       with:
-        ref: ${{ inputs.checkout_ref }}
-    - name: 'Install packages'
-      run: |
-        sudo apt-get update
-        sudo apt-get install graphviz-dev util-linux
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: 'Install python dependencies'
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        checkout_ref: ${{ inputs.checkout_ref }}
     - name: 'Lint with flake8'
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: 'Save State'
-      uses: actions/cache/save@v3
-      with:
-        path: ./
-        key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
+    # - name: 'Save State'
+      # uses: actions/cache/save@v3
+      # with:
+        # path: ./
+        # key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
+
 #    - name: 'Test with pytest'
 #      run: |
 #        pytest
