--- a/.github/workflows/generate_build_tvl.yml
+++ b/.github/workflows/generate_build_tvl.yml
@@ -22,9 +22,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     steps:
-    - uses: actions/TvlMergeTest@v1
+    - uses: actions/checkout@v3
       with:
-        checkout_ref: ${{ inputs.checkout_ref }}
+        ref: ${{ inputs.checkout_ref }}
+    - name: 'Install packages'
+      run: |
+        sudo apt-get update
+        sudo apt-get install graphviz-dev util-linux
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
+    - name: 'Install python dependencies'
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     # - name: 'Loads State'
     #   uses: actions/cache/restore@v3
     #   with:
