--- a/.github/workflows/test_tvlgen.yml
+++ b/.github/workflows/test_tvlgen.yml
@@ -21,25 +21,22 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-    #  - uses: actions/checkout@v3
-    #    with:
-    #      ref: ${{ inputs.checkout_ref }}
-    #  - name: 'Install packages'
-    #    run: |
-    #      sudo apt-get update
-    #      sudo apt-get install graphviz-dev util-linux
-    #  - name: Set up Python 3.8
-    #    uses: actions/setup-python@v3
-    #    with:
-    #      python-version: '3.8'
-    #  - name: 'Install python dependencies'
-    #    run: |
-    #      python -m pip install --upgrade pip
-    #      pip install flake8 pytest
-    #      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - uses: actions/TvlMergeTest@v1
+    - uses: actions/checkout@v3
       with:
-        checkout_ref: ${{ inputs.checkout_ref }}
+        ref: ${{ inputs.checkout_ref }}
+    - name: 'Install packages'
+      run: |
+        sudo apt-get update
+        sudo apt-get install graphviz-dev util-linux
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
+    - name: 'Install python dependencies'
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: 'Lint with flake8'
       run: |
         # stop the build if there are Python syntax errors or undefined names
