--- a/.github/workflows/tvlgen_merge_main.yaml
+++ b/.github/workflows/tvlgen_merge_main.yaml
@@ -14,11 +14,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate-and-build
     steps:
-    - name: 'Loads State'
-      uses: actions/cache/restore@v3
+    - uses: actions/checkout@v3
       with:
-        path: ./
-        key: ${{ runner.os }}}-${{ env.GITHUB_SHA }}-checked-out
+        ref: ${{ inputs.checkout_ref }}
+    - name: 'Install packages'
+      run: |
+        sudo apt-get update
+        sudo apt-get install graphviz-dev util-linux
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
+    - name: 'Install python dependencies'
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Setup Git Creds
       run: |
         git reset --hard
