--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -3,13 +3,25 @@ name: 'docker-test'
 on: push
 
 jobs:
+  create-env:
+    name: Create and push Docker container
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Build Docker Image
+        run: |
+          ID=$(docker build -q -t tvlgen_docker .)
+          docker tag $ID tvlgen_docker:latest
+      - name: Push Docker Image
+        run: docker push ghcr.io/JPietrzykTUD/tvlgen:latest
   generate:
     name: Generate TVL
     runs-on: ubuntu-latest
     container:
-      image: composer:latest
+      image: tvlgen:latest
       volumes:
-        - ${{ github.workspace }}:/tvl
+        - ${{ github.workspace }}:/tvlgen
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
