--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -13,8 +13,25 @@ jobs:
         run: |
           ID=$(docker build -q -t tvlgen_docker .)
           docker tag $ID tvlgen_docker:latest
-      - name: Push Docker Image
-        run: docker push ghcr.io/jpietrzyktud/tvlgen_docker:latest
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v4.3.0
+        with:
+          images: jpietrzyktud/tvlgen
+      - name: Build and push Docker image
+        uses: docker/build-push-action@4.0.0
+        with:
+          context: .
+          push: true
+          tags: type=ref,enable=true,priority=600,prefix=,suffix=,event=branch
+          #labels
+      #- name: Push Docker Image
+      #  run: docker push ghcr.io/jpietrzyktud/tvlgen_docker:latest
   generate:
     name: Generate TVL
     needs: create-env
