--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           images: jpietrzyktud/tvlgen
       - name: Build and push Docker image
-        uses: docker/build-push-action@4.0.0
+        uses: docker/build-push-action@v4.0.0
         with:
           context: .
           push: true
