--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Build Docker Image
-        run: |
-          ID=$(docker build -q -t tvlgen_docker .)
-          docker tag $ID tvlgen_docker:latest
+      # - name: Build Docker Image
+      #   run: |
+      #     ID=$(docker build -q -t tvlgen_docker .)
+      #     docker tag $ID tvlgen_docker:latest
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
