--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -2,32 +2,27 @@ name: 'docker-test'
 
 on: push
 
-env:
-  DOCKERHUB_REPOSITORY: tvlgen
-  DOCKERHUB_REGISTRY: docker.io
-  DOCKERHUB_USER: ${{ secrets.DOCKER_HUB_USER }}
-  DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-  DOCKER_IMAGE: ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}
-  DOCKER_IMAGE_TAGGED:  ${{ env.DOCKER_IMAGE }}:${{ github.ref }}
-  DOCKERHUB_IMAGE_FQN: ${{ env.DOCKERHUB_REGISTRY }}/${{ DOCKER_IMAGE_TAGGED }}
-  CONTAINER_TVLGEN_ROOT: /tvlgen
-
 jobs:
   create-env:
     name: Create and push Docker container
     runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_REPOSITORY: tvlgen
+      DOCKERHUB_REGISTRY: docker.io
+      DOCKERHUB_USER: ${{ secrets.DOCKER_HUB_USER }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      DOCKER_IMAGE: ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}
+      DOCKER_IMAGE_TAGGED:  ${{ env.DOCKER_IMAGE }}:${{ github.ref }}
+      DOCKERHUB_IMAGE_FQN: ${{ env.DOCKERHUB_REGISTRY }}/${{ DOCKER_IMAGE_TAGGED }}
+      CONTAINER_TVLGEN_ROOT: /tvlgen
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      # - name: Build Docker Image
-      #   run: |
-      #     ID=$(docker build -q -t tvlgen_docker .)
-      #     docker tag $ID tvlgen_docker:latest
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ env.DOCKERHUB_USER }}
+          password: ${{ env.DOCKERHUB_PASSWORD }}
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v4.3.0
@@ -39,15 +34,12 @@ jobs:
           context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE_TAGGED }}
-          #labels
-      #- name: Push Docker Image
-      #  run: docker push ghcr.io/jpietrzyktud/tvlgen_docker:latest
   generate:
     name: Generate TVL
     needs: create-env
     runs-on: ubuntu-latest
     container:
-      image: ${DOCKERHUB_IMAGE_FQN}
+      image: ${{ env.DOCKERHUB_IMAGE_FQN }}
       volumes:
         - ${{ github.workspace }}:${{ env.CONTAINER_TVLGEN_ROOT }}
     steps:
