--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -9,11 +9,7 @@ jobs:
     env:
       DOCKERHUB_REPOSITORY: tvlgen
       DOCKERHUB_REGISTRY: docker.io
-      DOCKERHUB_USER: ${{ secrets.DOCKER_HUB_USER }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      DOCKER_IMAGE: ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}
-      DOCKER_IMAGE_TAGGED:  ${{ env.DOCKER_IMAGE }}:${{ github.ref }}
-      DOCKERHUB_IMAGE_FQN: ${{ env.DOCKERHUB_REGISTRY }}/${{ DOCKER_IMAGE_TAGGED }}
+      DOCKER_IMAGE_TAG: ${{ github.ref }} 
       CONTAINER_TVLGEN_ROOT: /tvlgen
     steps:
       - name: Check out the repo
@@ -21,25 +17,25 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
-          username: ${{ env.DOCKERHUB_USER }}
-          password: ${{ env.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v4.3.0
         with:
-          images: ${{ env.DOCKER_IMAGE }}
+          images: ${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.DOCKER_IMAGE_TAGGED }}
+          tags: ${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ DOCKER_IMAGE_TAG }}
   generate:
     name: Generate TVL
     needs: create-env
     runs-on: ubuntu-latest
     container:
-      image: ${{ env.DOCKERHUB_IMAGE_FQN }}
+      image: ${{ env.DOCKERHUB_REGISTRY }}/${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ DOCKER_IMAGE_TAG }}
       volumes:
         - ${{ github.workspace }}:${{ env.CONTAINER_TVLGEN_ROOT }}
     steps:
