--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -29,13 +29,13 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ DOCKER_IMAGE_TAG }}
+          tags: ${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
   generate:
     name: Generate TVL
     needs: create-env
     runs-on: ubuntu-latest
     container:
-      image: ${{ env.DOCKERHUB_REGISTRY }}/${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ DOCKER_IMAGE_TAG }}
+      image: ${{ env.DOCKERHUB_REGISTRY }}/${{ secrets.DOCKER_HUB_USER }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ evn.DOCKER_IMAGE_TAG }}
       volumes:
         - ${{ github.workspace }}:${{ env.CONTAINER_TVLGEN_ROOT }}
     steps:
