--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: $DOCKERHUB_NAMESPACE/$DOCKERHUB_REPOSITORY:$DOCKER_IMAGE_TAG
+          tags: ${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
   generate:
     name: Generate TVL
     needs: create-env
