--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -1,6 +1,5 @@
 name: 'docker-test'
 
-on: push
 env:
   DOCKERHUB_NAMESPACE: jpietrzyktud
   DOCKERHUB_REPOSITORY: tvlgen
@@ -8,35 +7,45 @@ env:
   DOCKER_IMAGE_TAG: ${{ github.ref_name }} 
   CONTAINER_TVLGEN_ROOT: /tvlgen
 
+on: push
+
 jobs:
-  create-env:
-    name: Create and push Docker container
+  # create-env:
+  #   name: Create and push Docker container
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v3
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v2.1.0
+  #       with:
+  #         username: ${{ secrets.DOCKER_HUB_USER }}
+  #         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  #     - name: Extract metadata for Docker
+  #       id: meta
+  #       uses: docker/metadata-action@v4.3.0
+  #       with:
+  #         images: ${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}
+  #     - name: Build and push Docker image
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: ${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
+  stuff:
     runs-on: ubuntu-latest
+    outputs:
+      image_name: ${{ steps.step1.outputs.image_name }}
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2.1.0
-        with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v4.3.0
-        with:
-          images: ${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
+      - id: step1
+        run: echo "${{ env.DOCKERHUB_REGISTRY }}/${{ env.DOCKERHUB_NAMESPACE }}/${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG}} " >> "$GITHUB_OUTPUT"
   generate:
     name: Generate TVL
-    needs: create-env
+    needs: stuff 
+    #create-env
     runs-on: ubuntu-latest
     container:
-      image: $DOCKERHUB_REGISTRY/$DOCKERHUB_NAMESPACE/$DOCKERHUB_REPOSITORY$DOCKER_IMAGE_TAG
+      image: ${{ needs.stuff.outputs.image_name }}
       volumes:
         - ${{ github.workspace }}:$CONTAINER_TVLGEN_ROOT
     steps:
