--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,5 +15,6 @@ jobs:
   validate-primitives:
     uses: ./.github/workflows/validate_primitives.yml
     secrets: inherit
+    needs: validate-generator
     with:
       checkout_ref: ${{ github.event.pull_request.head.sha }}
