--- a/.github/workflows/validate_generator.yml
+++ b/.github/workflows/validate_generator.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Echo container image
         run: echo ${{ needs.validate-generator.container.image }}        
       - name: Print container image
-        run: echo "Container image: ${{ github.job.container.image }}"
+        run: |
+          echo Blubb "${{ github.job.container.image }}"
       - name: Check out the repo
         uses: actions/checkout@v3
         with:
